# CHRONOS-sitting-alert

./: .editorconfig  .gitignore  compose.yml
.github/workflows/: test_api_server.yml  test_arduino.yml
api_server/: .dockerignore  .mise.toml  Dockerfile  Taskfile.yml  pyproject.toml
api_server/app/: config.py  main.py
arduino/: .clang-format  .gitignore  Taskfile.yml  platformio.ini
arduino/include/armkn/: types.hpp
arduino/include/armkn/accumulator/: summing_queue.hpp
arduino/include/armkn/botsu/: http_client.hpp
arduino/include/armkn/net/: http_client.hpp  wifi.hpp
arduino/include/armkn/task_polling/: http_client.hpp  periodic_digital_signal.hpp  periodic_task.hpp
arduino/include/armkn/utils/: wifi.hpp
arduino/src/: env.example.h  main.cpp
